# uv-fastapi-template

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.in  requirements.txt  test_db.py
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 1ef8749eb33e_initial_migration_with_user_and_student_.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  basic.py  students.py  users.py
app/core/: config.py  database.py  deps.py  logger.py  security.py
app/crud/: __init__.py  student.py  user.py
app/middleware/: LoggingMiddleware.py
app/models/: __init__.py  base.py  response.py  study.py  user.py
app/schemas/: __init__.py  health.py  student.py  token.py  user.py
app/toolkit/: README.md  __init__.py  const.py  converter.py  crypto.py  datetime.py  datetime_utils.py  file.py  string.py  string_utils.py  test_toolkit.py
tests/: test_auth.py  test_students.py
